--- a/src/App.css
+++ b/src/App.css
@@ -929,6 +929,23 @@ pre code {
 	margin-left: 91.666667%
 }
 
+.loader{
+    position: absolute;
+	pointer-events: none;
+    top:0px;
+    right:0px;
+    width:100%;
+    height:100%;
+    background-color:#eceaea;
+    background-image:url('./ajax-loader.gif');
+    background-size: 50px;
+    background-repeat:no-repeat;
+    background-position:center;
+    z-index:10000000;
+    opacity: 0.4;
+    filter: alpha(opacity=40);
+}
+
 @media (min-width:576px) {
 	.col-sm {
 		-ms-flex-preferred-size: 0;
